fix: try fix menu icons alignment on mobile

--- a/assets/css/mediaquery.css
+++ b/assets/css/mediaquery.css
@@ -99,6 +99,14 @@
 }
 
 @media only screen and (max-width: 500px) {
+    #mobileExpanded li {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
+        height: 10%;
+    }
     .nav-list ul li:hover a {
         color: #a3a3a3;
     }
@@ -154,7 +162,7 @@
         background-size: cover;
         width: 25px;
         height: 25px;
-        left: 80px;
+        left: 75px;
     }
     .nav-list ul li a {
         font-weight: 200;
